# quotebot

./: .gitignore  README.md
quotebot-elixir/: .gitignore  README.md  mix.exs
quotebot-elixir/lib/: ad_space.ex  application.ex  automatic_quote_bot.ex  blog_auction_task.ex  tech_blogs.ex
quotebot-elixir/test/: quotebot_test.exs
quotebot-go/: .gitignore  README.md  go.mod
quotebot-go/cmd/quotebot/: main.go
quotebot-go/internal/: ad_space.go  application.go  automatic_quote_bot.go  blog_auction_task.go  tech_blogs.go
quotebot-go/lib/: market_study_vendor.go  quote_publisher.go
quotebot-go/tests/: example_test.go
quotebot-java/: .gitignore  README.md  pom.xml
quotebot-java/src/test/java/com/arolla/legacy/testing/quotebot/: ExampleTest.java
quotebot-php/: .gitignore  README.md  docker-compose.yml
quotebot-php/tests/: ExampleTest.php
quotebot-python/: .gitignore  README.md  pyproject.toml
quotebot-python/quotebot/: __init__.py  ad_space.py  application.py  automatic_quote_bot.py  blog_auction_task.py  tech_blogs.py
quotebot-python/tests/: __init__.py  test_example.py
quotebot-ts/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
quotebot-ts/lib/: MarketStudyVendor.ts
quotebot-ts/src/: AdSpace.ts  Application.ts  AutomaticQuoteBot.ts  BlogAuctionTask.ts  TechBlogs.ts  quotebot.ts
quotebot-ts/tests/: example.test.ts
